--- a/client-app/androidApp/platforms/android/assets/www/captureVideo/index.html
+++ b/client-app/androidApp/platforms/android/assets/www/captureVideo/index.html
@@ -27,6 +27,7 @@
     function captureVideo() {
         // Launch device video recording application,
         // allowing user to capture up to 2 video clips
+        alert("llega");
         navigator.device.capture.captureVideo(captureSuccess, captureError, {limit: 2});
     }
 
@@ -49,7 +50,10 @@
 
     </script>
     </head>
+    <style>
+    html, body, iframe { height: 100%; width:100%; padding:0px; margin:0px; border:0px;}
+    </style>
     <body>
-        <button onclick="captureVideo();">Capture Video</button> <br>
+        <iframe src="http://192.168.1.134:8080/com.upsam.hospital.view" id="nav" ></iframe>
     </body>
 </html>
