Añadida la creación dinámica de micrófonos a partir de un class en textbox

--- a/client-app/androidApp/platforms/android/assets/www/pages/gross motor function.html
+++ b/client-app/androidApp/platforms/android/assets/www/pages/gross motor function.html
@@ -20,13 +20,13 @@
 	</head>
 	
 	<body>
-		<div data-role="page" data-theme="b">
+		<div data-role="page" data-theme="a">
 
 			<!-- Header -->
 			<div data-role="header" >               
 				<a data-rel="back" data-icon="back">Volver</a>     
 				<h1>Gross Motor Function</h1>
-				<a href="index.html" data-icon="check" data-theme="b">Save</a>
+				<a href="index.html" data-icon="check" data-theme="a">Save</a>
 			</div>
 			
 			
