--- a/client-app/androidApp/platforms/android/assets/www/pages/val_articular_muscular.html
+++ b/client-app/androidApp/platforms/android/assets/www/pages/val_articular_muscular.html
@@ -35,12 +35,12 @@
 </head>
 <body>
 
-<div data-role="page" data-theme="b">
+<div data-role="page" data-theme="a">
 	<!-- Header -->
 	<div data-role="header" >                    
 	    <h2>Valoraci&oacute;n articular y muscular</h2>
 	    <a data-rel="back" data-icon="back">Volver</a>
-	   <a href="index.html" data-icon="check" data-theme="b">Save</a>
+	   <a href="index.html" data-icon="check" data-theme="a">Save</a>
 	</div>
 	
 	
