--- a/client-app/androidApp/platforms/android/assets/www/home.html
+++ b/client-app/androidApp/platforms/android/assets/www/home.html
@@ -21,7 +21,7 @@
 			<div data-role="header"><h1>Inicio</h1></div>
 			<div role="main" class="ui-content"> 
 				<ul data-role="listview" data-inset="true">
-				    <li><a href="pages/index.html" rel="external" data-transition="slide" data-direction="reverse">Gesti&oacute;n de pacientes</a></li>
+				    <li><a href="pages/exploracion_fisica.html" rel="external" data-transition="slide" data-direction="reverse">Gesti&oacute;n de pacientes</a></li>
 				    <li><a href="pages/3dSimulation.html" rel="external" data-transition="slide" data-direction="reverse">Simulaci&oacute;n 3D</a></li>
 				    <li><a href="#">FAQS</a></li>
 				</ul>
