--- a/client-app/androidApp/platforms/android/assets/www/pages/functional_mobility_scale.html
+++ b/client-app/androidApp/platforms/android/assets/www/pages/functional_mobility_scale.html
@@ -32,12 +32,12 @@
 		</script>
 	</head>
 	<body>
-		<div data-role="page" data-theme="b">
+		<div data-role="page" data-theme="a">
 			<!-- Header -->
 			<div data-role="header" >                    
 				<h2>Functional Mobility Scale</h2>
 				<a data-rel="back" data-icon="back">Volver</a>
-			   <a href="index.html" data-icon="check" data-theme="b">Save</a>
+			   <a href="index.html" data-icon="check" data-theme="a">Save</a>
 			</div>
 			
 			
