Se introducen los campos fecha y grabación de voz en los formularios

--- a/client-app/androidApp/platforms/android/assets/www/pages/evaluacion_muscular_manual.html
+++ b/client-app/androidApp/platforms/android/assets/www/pages/evaluacion_muscular_manual.html
@@ -49,7 +49,7 @@
 			<!--Valoracion numerica -->			
 			<div data-role="fieldcontain">  
 				<label for="valoracionMuscular">Valoraci&oacute;n:</label>  
-				<input type="text" name="valoracionMuscular" id="valoracionMuscular"/>				
+				<input type="text" class="txt-speech" name="valoracionMuscular" id="valoracionMuscular"/>				
 			</div>
 			
 			
