--- a/client-app/androidApp/platforms/android/assets/www/pages/functional_mobility_scale.html
+++ b/client-app/androidApp/platforms/android/assets/www/pages/functional_mobility_scale.html
@@ -53,15 +53,15 @@
 						  <tbody>
 								<tr>
 								  <th>5 metros</th>
-								  <td><input type="text" name="cincoMetros" id="cincoMetros"></td>
+								  <td><input type="text" class="txt-speech" name="cincoMetros" id="cincoMetros"></td>
 								</tr>		
 								<tr>
 								  <th>50 metros</th>
-								  <td><input type="text" name="cincuentaMetros" id="cincuentaMetros"></td>
+								  <td><input type="text" class="txt-speech" name="cincuentaMetros" id="cincuentaMetros"></td>
 								</tr>		
 								<tr>
 								  <th>500 metros</th>
-								  <td><input type="text" name="quinientosMetros" id="quinientosMetros"></td>
+								  <td><input type="text" class="txt-speech" name="quinientosMetros" id="quinientosMetros"></td>
 								</tr>	
 							</tbody>
 					</table>
