--- a/client-app/androidApp/platforms/android/assets/www/pages/longitud_miembros_infe.html
+++ b/client-app/androidApp/platforms/android/assets/www/pages/longitud_miembros_infe.html
@@ -37,13 +37,13 @@
 				<!-- Derecho -->
 				<div data-role="fieldcontain">  
 					<label for="derecho">Derecho: Troc&aacute;ter-mal&eacute;olo (cm):</label>  
-					<input type="text" name="derecho" id="derecho" value=""  />
+					<input type="text" class="txt-speech" name="derecho" id="derecho" value=""  />
 				</div>
 
 				<!-- Izquierdo -->
 				<div data-role="fieldcontain">  
 					<label for="izquierdo">Izquierdo: Troc&aacute;ter-mal&eacute;olo (cm):</label>  
-					<input type="text" name="izquierdo" id="izquierdo" value=""  />
+					<input type="text" class="txt-speech" name="izquierdo" id="izquierdo" value=""  />
 				</div>
 			</div>
 		</div>
