--- a/client-app/androidApp/platforms/android/assets/www/pages/val_articular_muscular.html
+++ b/client-app/androidApp/platforms/android/assets/www/pages/val_articular_muscular.html
@@ -89,142 +89,142 @@
 					<tr>
 					  <td><b>Cadera</b></td>
 					  <td>Flexi&oacute;n</td>
-					  <td><input type="text" name="val" id="val" value=""  /></td>
-					  <td><input type="text" name="val" id="val" value=""  /></td>
-					  <td><input type="text" name="val" id="val" value=""  /></td>
-					  <td><input type="text" name="val" id="val" value=""  /></td>
-					  <td><input type="text" name="val" id="val" value=""  /></td>
-					  <td><input type="text" name="val" id="val" value=""  /></td>
+					  <td><input type="text" class="txt-speech" name="val" id="val" value=""  /></td>
+					  <td><input type="text" class="txt-speech" name="val" id="val" value=""  /></td>
+					  <td><input type="text" class="txt-speech" name="val" id="val" value=""  /></td>
+					  <td><input type="text" class="txt-speech" name="val" id="val" value=""  /></td>
+					  <td><input type="text" class="txt-speech" name="val" id="val" value=""  /></td>
+					  <td><input type="text" class="txt-speech" name="val" id="val" value=""  /></td>
 					  
 					</tr>
 					<tr>
 					  <td></td>
 					  <td>Extensi&oacute;n</td>
-					  <td><input type="text" name="val" id="val" value=""  /></td>
-					  <td><input type="text" name="val" id="val" value=""  /></td>
-					  <td><input type="text" name="val" id="val" value=""  /></td>
-					  <td><input type="text" name="val" id="val" value=""  /></td>
-					  <td><input type="text" name="val" id="val" value=""  /></td>
-					  <td><input type="text" name="val" id="val" value=""  /></td>					  
+					  <td><input type="text" class="txt-speech" name="val" id="val" value=""  /></td>
+					  <td><input type="text" class="txt-speech" name="val" id="val" value=""  /></td>
+					  <td><input type="text" class="txt-speech" name="val" id="val" value=""  /></td>
+					  <td><input type="text" class="txt-speech" name="val" id="val" value=""  /></td>
+					  <td><input type="text" class="txt-speech" name="val" id="val" value=""  /></td>
+					  <td><input type="text" class="txt-speech" name="val" id="val" value=""  /></td>					  
 					</tr>
 					<tr>
 					  <td></td>
 					  <td>Abducci&oacute;n (cadera flex)</td>
-					  <td><input type="text" name="val" id="val" value=""  /></td>
-					  <td><input type="text" name="val" id="val" value=""  /></td>
-					  <td><input type="text" name="val" id="val" value=""  /></td>
-					  <td><input type="text" name="val" id="val" value=""  /></td>
-					  <td><input type="text" name="val" id="val" value=""  /></td>
-					  <td><input type="text" name="val" id="val" value=""  /></td>					  
+					  <td><input type="text" class="txt-speech" name="val" id="val" value=""  /></td>
+					  <td><input type="text" class="txt-speech" name="val" id="val" value=""  /></td>
+					  <td><input type="text" class="txt-speech" name="val" id="val" value=""  /></td>
+					  <td><input type="text" class="txt-speech" name="val" id="val" value=""  /></td>
+					  <td><input type="text" class="txt-speech" name="val" id="val" value=""  /></td>
+					  <td><input type="text" class="txt-speech" name="val" id="val" value=""  /></td>					  
 					</tr>					
 
 					<tr>
 					  <td></td>
 					  <td>Abducci&oacute;n (cadera ext)</td>
-					  <td><input type="text" name="val" id="val" value=""  /></td>
-					  <td><input type="text" name="val" id="val" value=""  /></td>
-					  <td><input type="text" name="val" id="val" value=""  /></td>
-					  <td><input type="text" name="val" id="val" value=""  /></td>
-					  <td><input type="text" name="val" id="val" value=""  /></td>
-					  <td><input type="text" name="val" id="val" value=""  /></td>					  
+					  <td><input type="text" class="txt-speech" name="val" id="val" value=""  /></td>
+					  <td><input type="text" class="txt-speech" name="val" id="val" value=""  /></td>
+					  <td><input type="text" class="txt-speech" name="val" id="val" value=""  /></td>
+					  <td><input type="text" class="txt-speech" name="val" id="val" value=""  /></td>
+					  <td><input type="text" class="txt-speech" name="val" id="val" value=""  /></td>
+					  <td><input type="text" class="txt-speech" name="val" id="val" value=""  /></td>					  
 					</tr>					
 					<tr>
 					  <td></td>
 					  <td>Rotaci&oacute;n Int</td>
-					  <td><input type="text" name="val" id="val" value=""  /></td>
-					  <td><input type="text" name="val" id="val" value=""  /></td>
-					  <td><input type="text" name="val" id="val" value=""  /></td>
-					  <td><input type="text" name="val" id="val" value=""  /></td>
-					  <td><input type="text" name="val" id="val" value=""  /></td>
-					  <td><input type="text" name="val" id="val" value=""  /></td>					  
+					  <td><input type="text" class="txt-speech" name="val" id="val" value=""  /></td>
+					  <td><input type="text" class="txt-speech" name="val" id="val" value=""  /></td>
+					  <td><input type="text" class="txt-speech" name="val" id="val" value=""  /></td>
+					  <td><input type="text" class="txt-speech" name="val" id="val" value=""  /></td>
+					  <td><input type="text" class="txt-speech" name="val" id="val" value=""  /></td>
+					  <td><input type="text" class="txt-speech" name="val" id="val" value=""  /></td>					  
 					</tr>					
 
 					<tr>
 					  <td></td>
 					  <td>Rotaci&oacute;n ext</td>
-					  <td><input type="text" name="val" id="val" value=""  /></td>
-					  <td><input type="text" name="val" id="val" value=""  /></td>
-					  <td><input type="text" name="val" id="val" value=""  /></td>
-					  <td><input type="text" name="val" id="val" value=""  /></td>
-					  <td><input type="text" name="val" id="val" value=""  /></td>
-					  <td><input type="text" name="val" id="val" value=""  /></td>					  
+					  <td><input type="text" class="txt-speech" name="val" id="val" value=""  /></td>
+					  <td><input type="text" class="txt-speech" name="val" id="val" value=""  /></td>
+					  <td><input type="text" class="txt-speech" name="val" id="val" value=""  /></td>
+					  <td><input type="text" class="txt-speech" name="val" id="val" value=""  /></td>
+					  <td><input type="text" class="txt-speech" name="val" id="val" value=""  /></td>
+					  <td><input type="text" class="txt-speech" name="val" id="val" value=""  /></td>					  
 					</tr>					
 
 					<tr>
 					  <td><b>Rodilla</b></td>
 					  <td>Flexi&oacute;n</td>
-					  <td><input type="text" name="val" id="val" value=""  /></td>
-					  <td><input type="text" name="val" id="val" value=""  /></td>
-					  <td><input type="text" name="val" id="val" value=""  /></td>
-					  <td><input type="text" name="val" id="val" value=""  /></td>
-					  <td><input type="text" name="val" id="val" value=""  /></td>
-					  <td><input type="text" name="val" id="val" value=""  /></td>					  
+					  <td><input type="text" class="txt-speech" name="val" id="val" value=""  /></td>
+					  <td><input type="text" class="txt-speech" name="val" id="val" value=""  /></td>
+					  <td><input type="text" class="txt-speech" name="val" id="val" value=""  /></td>
+					  <td><input type="text" class="txt-speech" name="val" id="val" value=""  /></td>
+					  <td><input type="text" class="txt-speech" name="val" id="val" value=""  /></td>
+					  <td><input type="text" class="txt-speech" name="val" id="val" value=""  /></td>					  
 					</tr>
 
 					<tr>
 					  <td></td>
 					  <td>Extensi&oacute;n</td>
-					  <td><input type="text" name="val" id="val" value=""  /></td>
-					  <td><input type="text" name="val" id="val" value=""  /></td>
-					  <td><input type="text" name="val" id="val" value=""  /></td>
-					  <td><input type="text" name="val" id="val" value=""  /></td>
-					  <td><input type="text" name="val" id="val" value=""  /></td>
-					  <td><input type="text" name="val" id="val" value=""  /></td>					 
+					  <td><input type="text" class="txt-speech" name="val" id="val" value=""  /></td>
+					  <td><input type="text" class="txt-speech" name="val" id="val" value=""  /></td>
+					  <td><input type="text" class="txt-speech" name="val" id="val" value=""  /></td>
+					  <td><input type="text" class="txt-speech" name="val" id="val" value=""  /></td>
+					  <td><input type="text" class="txt-speech" name="val" id="val" value=""  /></td>
+					  <td><input type="text" class="txt-speech" name="val" id="val" value=""  /></td>					 
 					</tr>	
 
 					<tr>
 					  <td><b>Tobillo</b></td>
 					  <td>Flex plantar</td>
-					  <td><input type="text" name="val" id="val" value=""  /></td>
-					  <td><input type="text" name="val" id="val" value=""  /></td>
-					  <td><input type="text" name="val" id="val" value=""  /></td>
-					  <td><input type="text" name="val" id="val" value=""  /></td>
-					  <td><input type="text" name="val" id="val" value=""  /></td>
-					  <td><input type="text" name="val" id="val" value=""  /></td>					  
+					  <td><input type="text" class="txt-speech" name="val" id="val" value=""  /></td>
+					  <td><input type="text" class="txt-speech" name="val" id="val" value=""  /></td>
+					  <td><input type="text" class="txt-speech" name="val" id="val" value=""  /></td>
+					  <td><input type="text" class="txt-speech" name="val" id="val" value=""  /></td>
+					  <td><input type="text" class="txt-speech" name="val" id="val" value=""  /></td>
+					  <td><input type="text" class="txt-speech" name="val" id="val" value=""  /></td>					  
 					</tr>
 
 					<tr>
 					  <td></td>
 					  <td>Flex dorsal (rodilla ext)</td>
-					  <td><input type="text" name="val" id="val" value=""  /></td>
-					  <td><input type="text" name="val" id="val" value=""  /></td>
-					  <td><input type="text" name="val" id="val" value=""  /></td>
-					  <td><input type="text" name="val" id="val" value=""  /></td>
-					  <td><input type="text" name="val" id="val" value=""  /></td>
-					  <td><input type="text" name="val" id="val" value=""  /></td>					  
+					  <td><input type="text" class="txt-speech" name="val" id="val" value=""  /></td>
+					  <td><input type="text" class="txt-speech" name="val" id="val" value=""  /></td>
+					  <td><input type="text" class="txt-speech" name="val" id="val" value=""  /></td>
+					  <td><input type="text" class="txt-speech" name="val" id="val" value=""  /></td>
+					  <td><input type="text" class="txt-speech" name="val" id="val" value=""  /></td>
+					  <td><input type="text" class="txt-speech" name="val" id="val" value=""  /></td>					  
 					</tr>	
 
 					<tr>
 					  <td></td>
-					  <td>Flex dorsal (rodilla 90º)</td>
-					  <td><input type="text" name="val" id="val" value=""  /></td>
-					  <td><input type="text" name="val" id="val" value=""  /></td>
-					  <td><input type="text" name="val" id="val" value=""  /></td>
-					  <td><input type="text" name="val" id="val" value=""  /></td>
-					  <td><input type="text" name="val" id="val" value=""  /></td>
-					  <td><input type="text" name="val" id="val" value=""  /></td>					  
+					  <td>Flex dorsal (rodilla 90ï¿½)</td>
+					  <td><input type="text" class="txt-speech" name="val" id="val" value=""  /></td>
+					  <td><input type="text" class="txt-speech" name="val" id="val" value=""  /></td>
+					  <td><input type="text" class="txt-speech" name="val" id="val" value=""  /></td>
+					  <td><input type="text" class="txt-speech" name="val" id="val" value=""  /></td>
+					  <td><input type="text" class="txt-speech" name="val" id="val" value=""  /></td>
+					  <td><input type="text" class="txt-speech" name="val" id="val" value=""  /></td>					  
 					</tr>	
 
 					<tr>
 					  <td></td>
 					  <td>Inversi&oacute;n</td>
-					  <td><input type="text" name="val" id="val" value=""  /></td>
-					  <td><input type="text" name="val" id="val" value=""  /></td>
-					  <td><input type="text" name="val" id="val" value=""  /></td>
-					  <td><input type="text" name="val" id="val" value=""  /></td>
-					  <td><input type="text" name="val" id="val" value=""  /></td>
-					  <td><input type="text" name="val" id="val" value=""  /></td>					  
+					  <td><input type="text" class="txt-speech" name="val" id="val" value=""  /></td>
+					  <td><input type="text" class="txt-speech" name="val" id="val" value=""  /></td>
+					  <td><input type="text" class="txt-speech" name="val" id="val" value=""  /></td>
+					  <td><input type="text" class="txt-speech" name="val" id="val" value=""  /></td>
+					  <td><input type="text" class="txt-speech" name="val" id="val" value=""  /></td>
+					  <td><input type="text" class="txt-speech" name="val" id="val" value=""  /></td>					  
 					</tr>	
 
 					<tr>
 					  <td></td>
 					  <td>Eversi&oacute;n</td>
-					  <td><input type="text" name="val" id="val" value=""  /></td>
-					  <td><input type="text" name="val" id="val" value=""  /></td>
-					  <td><input type="text" name="val" id="val" value=""  /></td>
-					  <td><input type="text" name="val" id="val" value=""  /></td>
-					  <td><input type="text" name="val" id="val" value=""  /></td>
-					  <td><input type="text" name="val" id="val" value=""  /></td>					  
+					  <td><input type="text" class="txt-speech" name="val" id="val" value=""  /></td>
+					  <td><input type="text" class="txt-speech" name="val" id="val" value=""  /></td>
+					  <td><input type="text" class="txt-speech" name="val" id="val" value=""  /></td>
+					  <td><input type="text" class="txt-speech" name="val" id="val" value=""  /></td>
+					  <td><input type="text" class="txt-speech" name="val" id="val" value=""  /></td>
+					  <td><input type="text" class="txt-speech" name="val" id="val" value=""  /></td>					  
 					</tr>						
 				  </tbody>
 			</table>						
