--- a/client-app/androidApp/platforms/android/assets/www/pages/tono_muscular_ashwroth.html
+++ b/client-app/androidApp/platforms/android/assets/www/pages/tono_muscular_ashwroth.html
@@ -58,39 +58,39 @@
 					<tr>
 					  <th>CADERA</th>
 					  <td>Flexi&oacute;n</td>
-					  <td><input type="text" id="caderaIzFlex" name="caderaIzFlex"/></td>
-					  <td><input type="text" id="caderaDerFlex" name="caderaDerFlex"/></td>          
+					  <td><input type="text" class="txt-speech" id="caderaIzFlex" name="caderaIzFlex"/></td>
+					  <td><input type="text" class="txt-speech" id="caderaDerFlex" name="caderaDerFlex"/></td>          
 					</tr>		
 					<tr>
 					  <th></th>
 					  <td>Inflexi&oacute;n</td>
-					  <td><input type="text" name="caderaIzInflex" id="caderaIzInflex"  ></td>
-					  <td><input type="text" name="caderaDerInflex" id="caderaDerInflex" ></td>         
+					  <td><input type="text" class="txt-speech" name="caderaIzInflex" id="caderaIzInflex"  ></td>
+					  <td><input type="text" class="txt-speech" name="caderaDerInflex" id="caderaDerInflex" ></td>         
 					</tr>
 					
 					<tr>
 					  <th>RODILLA</th>
 					  <td>Flexi&oacute;n</td>
-					  <td><input type="text" name="rodillaIzFlex" id="rodillaIzFlex"  ></td>
-					  <td><input type="text" name="rodillaDerFlex" id="rodillaDerFlex"  ></td>        
+					  <td><input type="text" class="txt-speech" name="rodillaIzFlex" id="rodillaIzFlex"  ></td>
+					  <td><input type="text" class="txt-speech" name="rodillaDerFlex" id="rodillaDerFlex"  ></td>        
 					</tr>		
 					<tr>
 						<th></th>
 						<td>Inflexi&oacute;n</td>
-						<td><input type="text" name="rodillaIzInflex" id="rodillaIzInflex" ></td>
-						<td><input type="text" name="rodillaDerInflex" id="rodillaDerInflex"   ></td>  
+						<td><input type="text" class="txt-speech" name="rodillaIzInflex" id="rodillaIzInflex" ></td>
+						<td><input type="text" class="txt-speech" name="rodillaDerInflex" id="rodillaDerInflex"   ></td>  
 					</tr>        
 					<tr>
 						<th>TOBILLO</th>
 						<td>Flexi&oacute;n</td>
-						<td><input type="text" name="tobilloIzflex" id="tobilloIzflex" ></td>
-						<td><input type="text" name="tobilloDerflex" id="tobilloDerflex" ></td>     
+						<td><input type="text" class="txt-speech" name="tobilloIzflex" id="tobilloIzflex" ></td>
+						<td><input type="text" class="txt-speech" name="tobilloDerflex" id="tobilloDerflex" ></td>     
 					</tr>		
 					<tr>
 						<th></th>
 						<td>Inflexi&oacute;n</td>
-						<td><input type="text" name="tobilloIzInflex" id="tobilloIzInflex"></td>
-						<td><input type="text" name="tobilloDerInflex" id="tobilloDerInflex" ></td>     
+						<td><input type="text" class="txt-speech" name="tobilloIzInflex" id="tobilloIzInflex"></td>
+						<td><input type="text" class="txt-speech" name="tobilloDerInflex" id="tobilloDerInflex" ></td>     
 					</tr>
 				  </tbody>
 			</table>			
