FAQs - Una primera versión que pueda servir de demo para definir lo que se quiere

--- a/client-app/androidApp/platforms/android/assets/www/home.html
+++ b/client-app/androidApp/platforms/android/assets/www/home.html
@@ -23,7 +23,7 @@
 				<ul data-role="listview" data-inset="true">
 				    <li><a href="pages/exploracion_fisica.html" rel="external" data-transition="slide" data-direction="reverse">Gesti&oacute;n de pacientes</a></li>
 				    <li><a href="pages/3dSimulation.html" rel="external" data-transition="slide" data-direction="reverse">Simulaci&oacute;n 3D</a></li>
-				    <li><a href="#">FAQS</a></li>
+				    <li><a href="pages/FAQs.html" rel="external" data-transition="slide" data-direction="reverse">FAQS</a></li>
 				</ul>
 			</div>
 		</div>
