--- a/client-app/androidApp/platforms/android/assets/www/pages/FAQs.html
+++ b/client-app/androidApp/platforms/android/assets/www/pages/FAQs.html
@@ -32,8 +32,8 @@
 			</div>
 
 			<div data-role="content">
-                <a id="showSearch" href="#" class="ui-btn ui-corner-all ui-icon-search ui-btn-icon-left">Buscar</a>
-                <a id="showCreate" href="#" class="ui-btn ui-corner-all ui-icon-plus ui-btn-icon-left">Crear</a>
+                <a href="#" class="ui-btn ui-corner-all ui-icon-search ui-btn-icon-left showSearch">Buscar</a>
+                <a href="#" class="ui-btn ui-corner-all ui-icon-plus ui-btn-icon-left showCreate">Crear</a>
                 <div class="searchPanel hide">
 
                     <div data-role="fieldcontain">
@@ -73,7 +73,7 @@
     		        </div>
 
                     <div class="questions_answers" class="hide" style="float:left;margin-left:20px;">
-                        <p><b>Pregunta de contenido:</b> <span class="respuesta">general</span></p>
+                        <p><b>Pregunta de contenido:</b> <span class="faqAnswer">general</span></p>
                     </div>
                 </div>
 
