Contador de videos en el enlace. Duración y nombre del fichero en el listado de videos Boton de video (imagen) para grabar

--- a/server-app/hospital.view/src/main/webapp/resources/client/pages/exploracion_fisica.html
+++ b/server-app/hospital.view/src/main/webapp/resources/client/pages/exploracion_fisica.html
@@ -116,7 +116,7 @@
 					
 					<ul data-role="listview" data-inset="true">	
 						<li data-role="list-divider">V&Iacute;DEOS</li>	
-						<li><a href="video_listado.html" data-transition="slide">Vídeos asociados al paciente</a></li>
+						<li><a href="video_listado.html" data-transition="slide">Vídeos asociados al paciente<span class="ui-li-count">6</span></a></li>
 					</ul>
 					
 					<ul data-role="listview" data-inset="true"  data-theme="c">
