--- a/server-app/hospital.view/src/main/webapp/resources/client/pages/video_detalle.html
+++ b/server-app/hospital.view/src/main/webapp/resources/client/pages/video_detalle.html
@@ -15,34 +15,33 @@
 		<script type="text/javascript" src="../index.js"></script>		
 		<script type="text/javascript" src='../js/jquery-1.9.1.min.js'></script>
 		<script type="text/javascript" src='../js/jquery.mobile-1.4.1.min.js'></script>		
-		<script type="text/javascript" src="../js/jquery.mobile-datebox.core.min.js"></script>
-		<script type="text/javascript" src="../js/jquery.mobile-datebox.mode.flipbox.min.js"></script>
-		<script type="text/javascript" src="../js/jquery.mobile-datebox.i18n.en_US.utf8.js"></script>		
-		<script type="text/javascript" src="../js/val_articular_muscular.js"></script>
-		
+				
 		<script type="text/javascript">
 			app.initialize();
 		</script>
 	</head>
 <body>
 
-<div data-role="page" data-theme="a">
+<div data-role="page">
 	<!-- Cabecera -->
 	<div data-role="header" >                    
-	    <h3>Valoraci&oacute;n articular y muscular - LAM</h3>
+	    <h3>Detalle v&iacute;deo - LAM</h3>
 	    <a data-rel="back" data-icon="back">Volver</a>
 	   <a href="index.html" data-icon="check">Guardar</a>
 	</div>	
 	
 	<!-- Contenido -->
 	<div data-role="content"> 	
-		<h2>Video 1</h2>
+		<h2>Detalle de V&iacute;deo</h2>
 		
 		<div class="content2">
-			<!-- Cuerpo -->
-			<div data-role="content">				
-				<h2 style="color:#77CDF1">Video 1</h2>
-				
+			Video 1<br>
+			<span class="videoFeatures">Archivo: archivo_001.mp4</span><br>
+			<span class="videoFeatures">Duración: 00:58 min</span><br>
+			
+			<div data-role="fieldcontain">  
+				<!-- Aqui iria el video -->
+				aqui iria el frame del video
 			</div>
 		</div>		
 	</div>
